finally added some images

--- a/src/app/flux-status-header/flux-status-header.component.sass
+++ b/src/app/flux-status-header/flux-status-header.component.sass
@@ -1,5 +1,5 @@
 .flux-status-container
-  background: #FED9A8
+  background: white
   &__title
     letter-spacing: 0.43px
     font-family: Montserrat-Bold, sans-serif
