--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -3,15 +3,14 @@
 <nav class="navbar navbar-light fixed-top">
   <div class="container">
     <a class="navbar-brand" href="#">
+      <img src="assets/images/logo_evolti.svg" class="img-fluid">
     </a>
   </div>
 </nav>
 
-
-
-<div class="container container-showcase-1">
+<div class="container-fluid container-showcase-1">
   <div class="row">
-    <div class="col-12 col-md-6 container-showcase-1__col">
+    <div class="col-12 offset-md-2 col-md-6 container-showcase-1__col">
       <div class="container-showcase-1__title">
         <p>Obtén tus paneles solares con <span class="color-lup--yellow">0</span> pesos</p>
       </div>
@@ -22,7 +21,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-12 col-md-6 container-showcase-1__question">
+    <div class="col-12 offset-md-2 col-md-6 container-showcase-1__question">
       <span class="color-lup--yellow">¿Qué esperas</span><span class="color-lup--violet"> para conocernos?</span>
     </div>
   </div>
@@ -53,8 +52,10 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-12 col-sm-6"></div>
-    <div class="col-12 col-sm-5">
+    <div class="col-12 col-sm-6">
+      <img src="assets/images/landing-1.png" class="img-fluid">
+    </div>
+    <div class="col-12 col-sm-5 container-showcase-3__col">
       <div class="color-lup--violet container-showcase-3__title">Sin inversión inicial</div>
       <div class="container-showcase-3__subtitle">
         <p>Sabemos que cada peso cuenta, en Evolti
@@ -65,7 +66,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-12 col-sm-6 text-end">
+    <div class="col-12 col-sm-6 text-end container-showcase-3__col">
       <div class="color-lup--violet-light container-showcase-3__title">
         Cero riesgo de instalación
       </div>
@@ -75,7 +76,24 @@
         </p>
       </div>
     </div>
-    <div class="col-12 col-sm-6"></div>
+    <div class="col-12 col-sm-6">
+      <img src="assets/images/landing-2.png" class="img-fluid">
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 col-sm-6">
+      <img src="assets/images/landing-3.png" class="img-fluid">
+    </div>
+    <div class="col-12 col-sm-5 container-showcase-3__col">
+      <div class="color-lup--violet container-showcase-3__title">
+        Facilidades económicas<br>
+        en tu factura de energía</div>
+      <div class="container-showcase-3__subtitle">
+        <p>Además de obtener los paneles, queremos presentarte una alternativa que traerá los mayores beneficios
+          <span class="color-lup--yellow"><b>a tu bolsillo</b></span>
+        </p>
+      </div>
+    </div>
   </div>
 </div>
 
@@ -88,7 +106,9 @@
         del planeta
       </div>
     </div>
-    <div class="col-12"></div>
+    <div class="col-12 container-showcase-4__background">
+      <img src="assets/images/landing-4.png" class="img-fluid">
+    </div>
     <div class="col-12 color-lup--violet container-showcase-4__subtitle">
       Cambiando la manera en que llega la energía a tu residencia
     </div>
@@ -107,21 +127,21 @@
   <div class="row">
     <div class="step-container">
       <div class="step">
-        <div class="step__icon"></div>
+        <div class="step__icon step__icon-1"></div>
         <div class="step__text">
           <div class="step__title">Analizamos la <br/>factibilidad del proyecto</div>
           <div class="step__description">Al recibir tu solicitud a través de un estudio simple y rápido para ponernos en contacto</div>
         </div>
       </div>
       <div class="step">
-        <div class="step__icon"></div>
+        <div class="step__icon step__icon-2"></div>
         <div class="step__text">
           <div class="step__title">Evolti realizará la inversión de los paneles por ti</div>
           <div class="step__description">Para que inicies con tu nueva energía sin demora</div>
         </div>
       </div>
       <div class="step">
-        <div class="step__icon"></div>
+        <div class="step__icon step__icon-3"></div>
         <div class="step__text">
           <div class="step__title">Garantizaremos la segura instalación del sistema solar</div>
           <div class="step__description">Sin ningún riesgo y siempre a tu alcance</div>
@@ -135,7 +155,7 @@
     </div>
     <div class="step-container">
       <div class="step">
-        <div class="step__icon"></div>
+        <div class="step__icon step__icon-4"></div>
         <div class="step__text">
           <div class="step__title">Durante una primera fase de operación, te proveeremos de energía más económica</div>
           <div class="step__description">Tendrás un descuesto en la factura mensual, mientras compartes con evolti ese ahorro de energía</div>
@@ -149,13 +169,13 @@
     </div>
     <div class="step-container">
       <div class="step">
-        <div class="step__icon"></div>
+        <div class="step__icon step__icon-5"></div>
         <div class="step__text">
           <div class="step__title">Finalizada la fase de operación, evolti te entregará tu sistema solar</div>
         </div>
       </div>
       <div class="step">
-        <div class="step__icon"></div>
+        <div class="step__icon step__icon-6"></div>
         <div class="step__text">
           <div class="step__title">De ahí en adelante tú eres el dueño</div>
           <div class="step__description">Disfrutando la energía limpia, renovable y gratuita del sol</div>
@@ -174,10 +194,9 @@
     <div class="col-12 container-showcase-7__subtitle">
       ¿Listo para empezar con una nueva forma de hacer las cosas?
     </div>
-    <div class="col-12">
+    <div class="col-12 container-showcase-7__background">
       <button class="lup-btn lup-btn--violet">¿Comenzamos?</button>
     </div>
-    <div class="col-12" style="width: 100%; background: red; height: 500px"></div>
   </div>
 </div>
 <div class="container-fluid container-showcase-8">
