--- a/src/app/welcome-modal/welcome-modal.component.html
+++ b/src/app/welcome-modal/welcome-modal.component.html
@@ -1,7 +1,7 @@
 <div class="screen-container">
   <div class="screen second-screen {{animationClassSecondScreen}}" (click)="onClickSecondScreen()">
     <div class="second-screen__title">
-      <p>Logo evolti</p>
+      <img src="assets/images/logo_evolti.svg" class="img-fluid" style="height: 230px; width: 500px;">
     </div>
   </div>
   <div class="screen first-screen {{animationClassFirstScreen}}" *ngIf="showFirstScreen" (click)="onClickFirstScreen()">
