--- a/src/app/welcome-modal/welcome-modal.component.sass
+++ b/src/app/welcome-modal/welcome-modal.component.sass
@@ -27,7 +27,8 @@
     letter-spacing: 2.85px
 
 .second-screen
-  background: transparent linear-gradient(0deg, #FEA837 0%, #FEA93A 0%, #FEBB63 5%, #FECB87 10%, #FED9A8 15%, #FEE5C3 22%, #FEEED9 29%, #FEF6EA 37%, #FEFBF6 47%, #FEFEFD 61%, #FFFFFF 100%) 0% 0% no-repeat padding-box
+  background: rgb(255,255,255)
+  background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(237,237,237,1) 100%)
   &__title
     color: black
     font-family: Montserrat-SemiBold, sans-serif
