--- a/src/app/flux-choice/flux-choice.component.html
+++ b/src/app/flux-choice/flux-choice.component.html
@@ -12,19 +12,23 @@
     <div class="col-12">
       <div class="flux-choice__options">
         <div class="flux-choice__option">
-          <button class="flux-choice__btn flux-choice__btn--yellow">
+          <button class="flux-choice__btn flux-choice__btn--yellow"
+            (click)="goToChoiceOne()">
             Ya tengo una cotización
           </button>
-          <a class="flux-choice__link flux-choice__link--yellow">
-            Y quiero financiarla
+          <a class="flux-choice__link flux-choice__link--yellow"
+             (click)="goToChoiceOne()">
+              Y quiero financiarla
           </a>
         </div>
         <div class="flux-choice__option">
-          <button class="flux-choice__btn flux-choice__btn--violet">
+          <button class="flux-choice__btn flux-choice__btn--violet"
+            (click)="goToChoiceTwo()">
             Aún no tengo una cotización
           </button>
-          <a class="flux-choice__link flux-choice__link--violet">
-            Y quiero obtenerla
+          <a class="flux-choice__link flux-choice__link--violet"
+             (click)="goToChoiceTwo()">
+              Y quiero obtenerla
           </a></div>
       </div>
     </div>
