refactor all flux

--- a/src/app/flux-choice/flux-choice.component.html
+++ b/src/app/flux-choice/flux-choice.component.html
@@ -1,5 +1,6 @@
 <app-flux-status-header
-  [fluxTitle]="'<p><span class=\'color-lup--violet-light\'>Sobre tu </span><span class=\'color-lup--yellow\'>proyecto solar</span></p>'">
+  [fluxTitle]="'<p><span class=\'color-lup--violet-light\'>Sobre tu </span><span class=\'color-lup--yellow\'>proyecto solar</span></p>'"
+  [fluxStep]="2">
 </app-flux-status-header>
 <div class="container-fluid">
   <div class="row">
