--- a/src/app/initial-data/initial-data.component.sass
+++ b/src/app/initial-data/initial-data.component.sass
@@ -59,6 +59,26 @@
   background: white
   z-index: 6
 
+.initial-data__screen-6
+  background: white
+  z-index: 5
+
+.initial-data__screen-7
+  background: transparent linear-gradient(270deg, #510CA8 0%, #2B054A 100%) 0% 0% no-repeat padding-box
+  z-index: 4
+
+.initial-data__screen-8
+  background: green
+  z-index: 3
+
+.initial-data__screen-9
+  background: green
+  z-index: 2
+
+.initial-data__screen-10
+  background: green
+  z-index: 1
+
 // overrides
 .lup-form__input
   width: 352px
