--- a/src/app/landing/landing.component.sass
+++ b/src/app/landing/landing.component.sass
@@ -121,6 +121,7 @@ $nav-height: 232px
     font-size: 22px
   &__background
     img
+      width: 100%
       max-width: 996px
 
 .container-showcase-5
@@ -211,3 +212,8 @@ $nav-height: 232px
   color: white
   .col-12
     padding-top: 70px
+
+// overrides
+.modal-content
+  background: transparent
+
