--- a/src/app/welcome-screen-one/welcome-screen-one.component.html
+++ b/src/app/welcome-screen-one/welcome-screen-one.component.html
@@ -2,7 +2,8 @@
   <div class="row">
     <div class="col-12">
       <div class="initial-data__screen-1__container">
-        <div class="initial-data__screen-1__icon"></div>
+        <div class="initial-data__screen-1__icon">
+        </div>
       </div>
     </div>
   </div>
