--- a/src/app/flux-choice-one/flux-choice-one.component.html
+++ b/src/app/flux-choice-one/flux-choice-one.component.html
@@ -18,7 +18,7 @@
             <label for="input1">
               Nombre de la empresa
             </label>
-            <input id="input1" class="lup-form__input" type="number" placeholder="500.000"/>
+            <input id="input1" class="lup-form__input" type="number"/>
           </div>
           <div class="lup-form__field">
             <label for="input2">
