--- a/src/app/flux-status-header/flux-status-header.component.html
+++ b/src/app/flux-status-header/flux-status-header.component.html
@@ -3,7 +3,7 @@
     <div class="col-12 col-sm-5 offset-sm-1 flux-status-container__title" [innerHTML]="fluxTitle">
     </div>
     <div class="col-12 offset-sm-1 col-sm-4 flux-status-container__progress">
-      <div class="flux-status-container__progress--default"></div>
+      <div class="flux-status-container__progress--{{fluxStep}}"></div>
     </div>
   </div>
 </div>
