--- a/src/app/loading-screen/loading-screen.component.sass
+++ b/src/app/loading-screen/loading-screen.component.sass
@@ -1,15 +1,11 @@
 @import "../../styles/styles"
 
-:host
-  width: 100%
-  height: 100%
-  background: transparent linear-gradient(270deg, #510CA8 0%, #2B054A 100%) 0% 0% no-repeat padding-box
 .loading-screen
   &__icon
     margin: 113px 0 27px 0
     height: 155px
-    width: 226px
-    background: red
+    width: 244px
+    @include logo-evolti--white
   &__subtitle
     align-self: flex-start
     color: white
@@ -30,7 +26,8 @@
     font-family: Montserrat-Bold, sans-serif
     font-size: 50px
   &__loading-icon
-    background: red
+    @include loading
+    background-position-x: -3px
     height: 62px
     width: 62px
     margin-right: 49px
