--- a/src/app/welcome-screen-one/welcome-screen-one.component.sass
+++ b/src/app/welcome-screen-one/welcome-screen-one.component.sass
@@ -1,13 +1,15 @@
+@import "src/styles/styles"
+
 .initial-data__screen-1
   &__container
     display: flex
     flex-direction: column
     align-items: center
   &__icon
-    background: red
+    @include logo-evolti--white
     margin-bottom: 200px
-    height: 100px
-    width: 100px
+    height: 156px
+    width: 244px
   &__title
     font-family: Montserrat-Bold, sans-serif
     color: white
