--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -137,21 +137,21 @@
   <div class="row">
     <div class="step-container">
       <div class="step">
-        <div class="step__icon step__icon-1"></div>
+        <div class="step__icon step__icon-1">1</div>
         <div class="step__text">
           <div class="step__title">Analizamos la <br/>factibilidad del proyecto</div>
           <div class="step__description">Al recibir tu solicitud a través de un estudio simple y rápido para ponernos en contacto</div>
         </div>
       </div>
       <div class="step">
-        <div class="step__icon step__icon-2"></div>
+        <div class="step__icon step__icon-2">2</div>
         <div class="step__text">
           <div class="step__title">Evolti realizará la inversión de los paneles por ti</div>
           <div class="step__description">Para que inicies con tu nueva energía sin demora</div>
         </div>
       </div>
       <div class="step">
-        <div class="step__icon step__icon-3"></div>
+        <div class="step__icon step__icon-3">3</div>
         <div class="step__text">
           <div class="step__title">Garantizaremos la segura instalación del sistema solar</div>
           <div class="step__description">Sin ningún riesgo y siempre a tu alcance</div>
@@ -165,7 +165,7 @@
     </div>
     <div class="step-container">
       <div class="step">
-        <div class="step__icon step__icon-4"></div>
+        <div class="step__icon step__icon-4">4</div>
         <div class="step__text">
           <div class="step__title">Durante una primera fase de operación, te proveeremos de energía más económica</div>
           <div class="step__description">Tendrás un descuesto en la factura mensual, mientras compartes con evolti ese ahorro de energía</div>
@@ -179,13 +179,13 @@
     </div>
     <div class="step-container">
       <div class="step">
-        <div class="step__icon step__icon-5"></div>
+        <div class="step__icon step__icon-5">5</div>
         <div class="step__text">
           <div class="step__title">Finalizada la fase de operación, evolti te entregará tu sistema solar</div>
         </div>
       </div>
       <div class="step">
-        <div class="step__icon step__icon-6"></div>
+        <div class="step__icon step__icon-6">6</div>
         <div class="step__text">
           <div class="step__title">De ahí en adelante tú eres el dueño</div>
           <div class="step__description">Disfrutando la energía limpia, renovable y gratuita del sol</div>
