--- a/src/app/result-screen/result-screen.component.html
+++ b/src/app/result-screen/result-screen.component.html
@@ -1,5 +1,6 @@
 <app-flux-status-header
-  [fluxTitle]="'<p><span class=\'color-lup--violet-light\'>¡Apenas estamos comenzando!</p>'">
+  [fluxTitle]="header"
+  [fluxStep]="2">
 </app-flux-status-header>
 <div class="container result-screen__container">
   <div class="row">
