--- a/src/app/welcome-screen-one/welcome-screen-one.component.sass
+++ b/src/app/welcome-screen-one/welcome-screen-one.component.sass
@@ -1,12 +1,13 @@
 @import "src/styles/styles"
-
-.initial-data__screen-1
+.welcome-one
   &__container
     display: flex
     flex-direction: column
+    justify-content: center
     align-items: center
   &__icon
     @include logo-evolti--white
+    margin-top: 113px
     margin-bottom: 200px
     height: 156px
     width: 244px
@@ -15,3 +16,5 @@
     color: white
     font-size: 50px
     margin-bottom: 185px
+    width: 100%
+    max-width: 1210px
