--- a/src/app/flux-choice-two/flux-choice-two.component.sass
+++ b/src/app/flux-choice-two/flux-choice-two.component.sass
@@ -39,8 +39,14 @@
       margin-top: 6px
       height: 51px
       width: 100%
-  &__btn
-
+  &__right-col
+    display: flex
+    flex-direction: column
+    align-items: flex-end
+  &__process
+    width: 687px
+    height: 556px
+    background-color: white
 
 // overrides
 .form-check-label
