--- a/src/app/welcome-screen-one/welcome-screen-one.component.html
+++ b/src/app/welcome-screen-one/welcome-screen-one.component.html
@@ -1,19 +1,15 @@
-<div class="container">
-  <div class="row">
-    <div class="col-12">
-      <div class="initial-data__screen-1__container">
-        <div class="initial-data__screen-1__icon">
-        </div>
+<div class="welcome-one__container">
+  <div class="welcome-one__icon"></div>
+  <div class="welcome-one__title text-center">
+    Te pediremos algunos datos sobre
+    tu proyecto para contarte todos los beneficios
+    que puedes obtener de manera personalizada
+  </div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12 col-md-11 text-end">
+        <button class="btn btn-link btn-navigation btn-navigation--white" (click)="continue()">continuar</button>
       </div>
     </div>
   </div>
-  <div class="initial-data__screen-1__title text-center">
-    Te pediremos algunos datos sobre<br/>
-    tu proyecto para contarte todos los beneficios<br/>
-    que puedes obtener de manera personalizada
-  </div>
-  <div class="initial-data__screen-1__btn text-end">
-    <a class="btn-navigation btn-navigation--white" (click)="continue()">continuar</a>
-  </div>
 </div>
-
