--- a/src/app/welcome-screen-two/welcome-screen-two.component.html
+++ b/src/app/welcome-screen-two/welcome-screen-two.component.html
@@ -1,18 +1,22 @@
-<div class="container">
-  <div class="row">
-    <div class="col-12">
-      <div class="initial-data__screen-2__logo"></div>
-      <div class="initial-data__screen-2__title text-center">
-        <div class="initial-data__screen-2__icon"></div>
-        Recuerda
+<div class="welcome-two__container">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12 offset-md-1 col-md-10">
+        <div class="welcome-two__logo"></div>
       </div>
-      <div class="initial-data__screen-2__subtitle text-center">
-        Debes tener a la mano tu factura de servicios públicos<br/>
-        más reciente, allí encontrarás la información necesaria<br/>
-        para responder las siguientes preguntas
-      </div>
-      <div class="initial-data__screen-1__btn text-end">
-        <a class="btn-navigation btn-navigation--white" (click)="continue()">continuar</a>
+    </div>
+  </div>
+  <div class="welcome-two__icon"></div>
+  <div class="welcome-two__title">Recuerda</div>
+  <div class="welcome-two__subtitle text-center">
+    Debes tener a la mano tu factura de servicios públicos<br/>
+    más reciente, allí encontrarás la información necesaria<br/>
+    para responder las siguientes preguntas
+  </div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12 col-md-11 text-end">
+        <button class="btn btn-link btn-navigation btn-navigation--white" (click)="continue()">continuar</button>
       </div>
     </div>
   </div>
